--- a/front_end/tshirts/src/App.less
+++ b/front_end/tshirts/src/App.less
@@ -40,3 +40,28 @@
     font-style: italic;
 }
 
+//navbar
+.navi {
+  display: flex;
+  align-items: center;
+  .logos {
+    width: 10%;
+    padding-left: 15px;
+    font-size: 20px;
+  }
+  .icons {
+    display: flex;
+    justify-content: flex-end;
+    width: 90%;
+    padding-right: 15px;
+    .icon {
+    margin: 10px;
+    font-size: 20px
+    }
+  }
+}
+
+
+
+
+
